updated the landing page

--- a/Landing page/index.html
+++ b/Landing page/index.html
@@ -25,6 +25,12 @@ code artistic
     <a href="#">Register</a>
 </div>
 </nav>
+<section class="h-text">
+    <span>Enjoy</span>
+    <h1>Explore the World</h1>
+    <br>
+    <a href="#">Visit Now</a>
+</section>
     </header>
 </body>
 </html>
