--- a/Portfolio website/index.html
+++ b/Portfolio website/index.html
@@ -42,6 +42,8 @@
             <a href="#"><i class='bx bxl-linkedin'></i></a>
             <a href="#"><i class='bx bxl-instagram'></i></a>
         </div>
+
+        <span class="home-imgHover"></span>
     </section>
 
 </body>
