updated all the styles

--- a/Portfolio website/index.html
+++ b/Portfolio website/index.html
@@ -28,13 +28,16 @@
         <div class="home-content">
             <h1>Hello </h1>
             <h3>Fullstack Developer</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptas a cupiditate, eum natus
-                voluptate dicta voluptatum eligendi illo tempore perferendis quae iste dolores. Aspernatur dolore maxime
-                magnam nobis culpa.</p>
-                <div class="btn-box">
-                    <a href="#">Hire Me</a>
-                    <a href="#">Lets's Talk</a>
-                </div>
+            <p>An aspiring Full Stack Developer embarking on a transformative journey in the ever-evolving realm of
+                technology. He is fueled by an insatiable curiosity and an unwavering
+                passion for crafting innovative solutions from both front-end finesse to back-end mastery. Join him as
+                he navigates the intricacies of coding, design, and development, striving to leave a mark in the digital
+                landscape. Explore his portfolio, delve into his projects, and witness the evolution of a future leader
+                in the tech industry.</p>
+            <div class="btn-box">
+                <a href="#">Hire Me</a>
+                <a href="#">Lets's Talk</a>
+            </div>
         </div>
 
         <div class="home-sci">
