--- a/Portfolio website/index.html
+++ b/Portfolio website/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">Jacob.</a>
+        <a href="#" class="logo">Portfolio Website</a>
 
         <nav class="navbar">
             <a href="#" class="active">Home</a>
